--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@
   <body>
 
     <div id="layer">
-      <canvas class="blur no-interact"></canvas>
+      <canvas class="blur no-interact fade"></canvas>
     </div>
 
     <div id="cover">
@@ -63,7 +63,7 @@
       <div class="articles-wrapper">
         <ul id="articles">
           {% for post in site.posts %}
-            <li class="article">
+            <li class="article blur">
               <h3 class="article-title"><a href="/post.html">{{ post.title }}</a></h3>
             </li>
           {% endfor %}
@@ -95,14 +95,14 @@
 
     <!-- menu stuff -->
     <!-- timeline -->
-    <ul class="timeline--bg blur" id="timeline">
+    <ul class="timeline--bg blur fade" id="timeline">
       {% for post in site.posts %}
         <li class="time-stamp">
           <p>{{ post.title }}</p>
         </li>
       {% endfor %}
     </ul>
-    <ul class="works--bg blur" id="works">
+    <ul class="works--bg blur fade" id="works">
       <li class="project">
         <div class="project-title">
           <h2>Interstellar Fishing</h2>
@@ -114,7 +114,7 @@
       <li class="project"></li>
       <li class="project"></li>
     </ul>
-    <p class="about--bg blur" id="about">
+    <p class="about--bg blur fade" id="about">
       There is nothing to show here.
     </p>
 
