--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -118,11 +118,11 @@ header {
 
   $stripe-color: hsla(0, 0%, 25%, 0.2);
   .post-content {
-    font-family: Proxima Nova;
-    font-size: 0.92rem;
+    font-family: Rajdhani;
+    font-size: 1rem;
     letter-spacing: 0.1px;
     line-height: 2;
-    color: hsla(0, 0%, 0%, 0.6);
+    color: hsla(0, 0%, 0%, 0.8);
     text-indent: 1rem;
     padding-top: 0.5rem;
     padding-left: 0.5rem;
@@ -143,7 +143,7 @@ header {
 
     h2 {
       display: inline-block;
-      font-family: Proxima Nova;
+      font-family: Monda;
       font-size: 1.3rem;
       color: hsla(0, 0%, 0%, 0.5);
       text-indent: 0;
