--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -20,7 +20,7 @@
 }
 
 @font-face {
-  font-family: Proxima Nova;
+  font-family: ProximaNova;
   src: url(/fonts/proximanova/Proxima-Nova-Regular.ttf);
 }
 
@@ -40,7 +40,7 @@
 }
 
 @font-face {
-  font-family: Century Gothic;
+  font-family: CenturyGothic;
   src: url(/fonts/centurygothic/CenturyGothic-Regular.ttf);
 }
 
