--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -41,7 +41,7 @@ $height: 4 * 16px;
 }
 
 header {
-  font-family: Proxima Nova;
+  font-family: ProximaNova;
 
   .post-title {
     font-size: 1.8rem;
