--- a/_sass/index-menu.scss
+++ b/_sass/index-menu.scss
@@ -45,7 +45,7 @@ $stamp-height: 6rem;
 
     p {
       cursor: pointer;
-      font-family: Proxima Nova;
+      font-family: Rajdhani;
       font-size: 1.1rem;
       margin: 0;
       margin-top: #{-4px};
