--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -376,7 +376,7 @@ $count: 4;
   }
 
   .article-title {
-    font-family: Daville;
+    font-family: Exo;
     margin: 0.5rem 0;
     padding: 0.5rem 2rem;
 
@@ -397,8 +397,21 @@ $count: 4;
 
   a {
     text-decoration: none;
-    color: hsla(0, 0%, 0%, 1);
+    color: hsl(0, 0, 25);
+    text-shadow:
+      0 0.9rem 0 hsl(0, 0, 35),
+      0 1.8rem 0 hsl(0, 0, 45);
     transition: color 0.25s;
+
+    &::before {
+      content: '';
+      display: inline-block;
+      width: 10%;
+      border-bottom: medium solid hsl(0, 0, 25);
+      position: relative;
+      top: -0.3rem;
+      left: -0.5rem;
+    }
 
     &:visited {
       // color: hsl(346, 68%, 22%);
