--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -35,12 +35,12 @@ canvas {
 }
 
 $left: 40%;
-$stripe-color: hsla(0, 0%, 25%, 0.2);
+$stripe-color: hsla(0, 0%, 25%, 0.15);
 #cover {
   transform: skewX(-10deg);
   width: 100%;
   height: 100%;
-  border-left: thin solid hsla(0, 0%, 80%, 1);
+  border-left: thin solid hsla(0, 0%, 85%, 1);
   position: absolute;
   left: $left;
   overflow: hidden;
@@ -228,7 +228,7 @@ $size: 70%;
 }
 
 .menu-wrapper {
-  font-family: Monda;
+  font-family: Teko;
   font-size: 0.9rem;
   width: 45%;
   // width: 85%;
@@ -295,8 +295,9 @@ $size: 70%;
     }
 
     .mi-title {
-      font-size: 1.5rem;
+      font-size: 1.8rem;
       font-weight: bold;
+      color: hsl(0, 0, 80);
 
       &::after {
         content: '>>';
@@ -306,6 +307,8 @@ $size: 70%;
 
     .mi-describe {
       display: block;
+      font-family: Rajdhani;
+      color: hsl(0, 0, 55);
       padding-top: 0.5rem;
       padding-left: 1.4rem;
       border-top: thin dotted hsla(0, 0%, 0%, 0.55);
