--- a/_sass/index-menu.scss
+++ b/_sass/index-menu.scss
@@ -103,7 +103,7 @@ $project-height: 14rem;
       width: 100%;
 
       h2 {
-        font-family: Proxima Nova;
+        font-family: ProximaNova;
         color: hsla(0, 0%, 40%, 1);
         margin: 0;
         width: 40%;
@@ -140,7 +140,7 @@ $project-height: 14rem;
 
 // about
 #about {
-  font-family: Proxima Nova;
+  font-family: ProximaNova;
   color: hsla(0, 0%, 0%, 0.55);
   position: absolute;
   transition: -webkit-filter 0.5s, top 0.5s, left 0.5s, font-size 0.5s;
